panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__decl_in_function__test_declare_function_in_function.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/decl_in_function/test_declare_function_in_function.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/decl_in_function/test_declare_function_in_function.c"
   (function-definition
      f~0 `fn() -> int`
      (compound-statement
         (declaration g~2 `fn() -> int` ∅)
         (declaration g~2 `fn() -> int` ∅)
         (return 42))))

----- stderr -----
