panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__decl_in_function__test_error_array_of_functions.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/decl_in_function/test_error_array_of_functions.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/decl_in_function/test_error_array_of_functions.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (declaration functions~2 `array<fn(∅: int, ∅: int) -> int; 42>` ∅))))

----- stderr -----
