panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__decl_in_function__test_error_redefinition_of_local_with_same_type.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/decl_in_function/test_error_redefinition_of_local_with_same_type.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/decl_in_function/test_error_redefinition_of_local_with_same_type.c"
   (function-definition
      a~0 `fn() -> int`
      (compound-statement
         (declaration x~2 `int` 42)
         (declaration x~2 `int` 27)
         (return (name x~2 `int`)))))

----- stderr -----
